# originchain-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
originchain/: __init__.py  _namespaces.py  async_client.py  client.py  errors.py  models.py
tests/: conftest.py  e2e_smoke.py  test_admin.py  test_e2e_live.py  test_errors.py  test_fts.py  test_graph.py  test_idempotency.py  test_sql.py  test_usage.py  test_vector.py
