[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "originchain"
version = "0.3.0"
description = "Official Python client for OriginChain — managed database for AI applications."
readme = "README.md"
authors = [{ name = "Silicoyn Technologies", email = "support@originchain.ai" }]
license = { text = "Proprietary" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27,<1",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
async = []  # async client uses httpx directly; no extras required.
# Pulls in `h2` so httpx can negotiate HTTP/2 with the engine. Saves
# ~300 ms per call after warmup against engines outside the client's
# region — connection reuse / multiplexing eliminates per-call TLS
# handshake. Auto-detected at import time; bare install stays HTTP/1.1.
http2 = ["h2>=4,<5"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "h2>=4,<5",  # dev installs get HTTP/2 by default for realistic local testing
]

[project.urls]
Homepage      = "https://originchain.ai"
Documentation = "https://originchain.ai/docs"
Source        = "https://github.com/silicoyn/originchain-python"
Issues        = "https://github.com/silicoyn/originchain-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["originchain"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
python_version = "3.9"
