[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "originchain"
version = "0.5.0"
description = "Official Python client for OriginChain - managed database for AI applications."
readme = "README.md"
authors = [{ name = "Silicoyn Technologies", email = "support@originchain.ai" }]
license = { text = "Proprietary" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27,<1",
  # HTTP/2 is now a hard dep (was optional `[http2]` extra in 0.3.x).
  # Multiplexing + ALPN-negotiated h2 saves ~300 ms per call on cross-
  # region requests vs HTTP/1.1 - the savings outweigh the ~250 KB
  # wheel size hit for the median user.
  "h2>=4,<5",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
async = []  # async client uses httpx directly; no extras required.
# Back-compat alias - the 0.3.x `[http2]` extra is now a no-op since h2
# is a hard dep. Kept so `pip install originchain[http2]` doesn't break
# existing requirements files / CI pins.
http2 = []
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage      = "https://originchain.ai"
Documentation = "https://originchain.ai/docs"
Source        = "https://github.com/originchain-ai/originchain-python"
Issues        = "https://github.com/originchain-ai/originchain-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["originchain"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# Deliberate mid-file imports: client.py imports _namespaces after the
# class definitions it depends on (circular-import avoidance); the
# tests import late after test-local setup.
"originchain/client.py" = ["E402"]
"tests/test_graph.py" = ["E402"]
"tests/test_sql.py" = ["E402"]
"tests/test_vector.py" = ["E402"]

[tool.mypy]
strict = true
python_version = "3.9"
